--- a/src/Components/CycleThrough.css
+++ b/src/Components/CycleThrough.css
@@ -2,12 +2,13 @@
 
 .cycle-through-container {
     max-width: 400px;
-    margin: 0 auto;
+    margin: 130px auto;
     padding: 20px;
     background-color: #f4f4f4;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     text-align: center;
+    position: absolute;
   }
   
   .data-display {
