--- a/src/Components/CycleThrough.css
+++ b/src/Components/CycleThrough.css
@@ -8,7 +8,7 @@
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     text-align: center;
-    position: absolute;
+    position:absolute
   }
   
   .data-display {
